--- a/ActionsContentViewExample/AndroidManifest.xml
+++ b/ActionsContentViewExample/AndroidManifest.xml
@@ -20,14 +20,15 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:allowBackup="false" >
         <activity
             android:name=".ExamplesActivity"
             android:label="@string/app_name" >
@@ -37,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EffectsExampleActivity" />
     </application>
 
 </manifest>
