--- a/ActionsContentViewExample/AndroidManifest.xml
+++ b/ActionsContentViewExample/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme"
         android:allowBackup="false" >
         <activity
