- resolve unimplemented methos at sample application

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,23 @@
 # Java class files
 *.class
 
-# generated files
-bin/
-gen/
-.settings/
-
 # Local configuration file (sdk path, etc)
 local.properties
+
+# Build and generated folders
+bin/
+gen/
+build/
+temp/
+tmp/
+.gradle/
+.settings/
+
+# Local properties
+local.properties
+
+# IDEA
+.idea
+*.iml
+*.ipr
+*.iws
